# snippies

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
docker/: Dockerfile
frontend/static/: app.css  theme-presets.jsonl  theme.js
frontend/templates/: base.html  error.html  index.html  new.html  snippie.html
snippies/: iterate-range.md  markdown-test.md
src/: error.html  index.html  main.rs  prism.css  prism.js  template.html
