[package]
name = "snippies"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
markdown = "1.0"
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["default"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
axum = { version = "0.8", features = ["default", "macros"] }
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
tera = "1.20"
